Fix team member spacing

--- a/team-section/css/style.css
+++ b/team-section/css/style.css
@@ -87,7 +87,7 @@ body {
   .team-list {
     grid-template-columns: repeat(1, 1fr);
   }
-  grid-row-gap: 64px;
+  grid-row-gap: 48px;
   grid-column-gap: 32px;
 }
 
@@ -150,6 +150,7 @@ body {
   .team-list {
     grid-template-columns: repeat(2, 1fr);
     padding-right: 16px;
+    grid-row-gap: 64px;
   }
 }
 
